@@ -2060,7 +2060,7 @@ to run <tt>swapctl -a /swap</tt> as root.
 <h3>HelenOS/testmips and testarm:</h3>
 
 <p>Old versions of <a href="http://www.helenos.org/">HelenOS</a> can run in GXemul's
-<tt>testarm</tt> and <tt>oldtestmips</tt> machine modes.
+<tt>testarm</tt> and <tt>testmips</tt> machine modes.
 
 <p>To run HelenOS for testarm in GXemul:
 <ol>
@@ -2078,7 +2078,7 @@ to run <tt>swapctl -a /swap</tt> as root.
 	<a href="http://www.helenos.org/releases/HelenOS-0.5.0-mips32-GXemul.boot">http://www.helenos.org/releases/HelenOS-0.5.0-mips32-GXemul.boot</a>
   </pre>
   <li>Start GXemul using the following command line:<pre>
-  	<b>gxemul -X -E oldtestmips HelenOS-0.5.0-mips32-GXemul.boot</b>
+  	<b>gxemul -X -E testmips HelenOS-0.5.0-mips32-GXemul.boot</b>
   </pre>
 </ol>
 
