@@ -400,7 +400,7 @@ machine in these lists is:
     <li><b>SGI O2 (aka IP32)</b> <font color="#0000e0">(<super>*2</super>)</font>
 	(<a href="guestoses.html#netbsdsgimips">NetBSD/sgimips</a>,
 	<a href="guestoses.html#openbsdsgiinstall">OpenBSD/sgi</a>)
-    <li><b>oldtestmips</b> (<a href="experiments.html#expdevices">experimental</a>, <a href="guestoses.html#helenos">HelenOS/mips</a>)
+    <li><b>testmips</b> (<a href="experiments.html#expdevices">experimental</a>, <a href="guestoses.html#helenos">HelenOS/mips</a>)
   </ul>
   <p>
   <li><b><u>Motorola 88K</u></b>
