@@ -4869,3 +4869,4 @@ Changelog for GXemul:
 		Removing the MIPS CPU emulation and testmips machines from
 		the new framework completely. Any MIPS enhancements and bug
 		fixes will go into the old framework only.
+		Renaming oldtestmips back to testmips.
